--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ obj = "0.10.1"
 bvh = "0.3.2"
 camera_ss = "0.1.1"
 nalgebra = "0.18"
+serde = "1.0.117"
+serde_json = "1.0.59"
+serde_derive = "1.0.117"
+#json = "0.12.4"
