--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "raskrasser"
-version = "0.1.0"
-authors = ["Roman Chumak <p4@phygitalism.com>"]
+name = "raskraser"
+version = "0.2.0"
+authors = ["Roman Chumak <p4ymak@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 image = "0.23.12"
