--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,12 @@ serde = "1.0.117"
 serde_json = "1.0.59"
 serde_derive = "1.0.117"
 rayon = "1.5.0"
+
+[profile.release]
+opt-level = 3
+debug = false
+rpath = false
+lto = true
+debug-assertions = false
+codegen-units = 1
+panic = 'abort'
