--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,18 @@
 [package]
 name = "eyek"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Roman Chumak <p4ymak@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 image = "0.23.12"
 obj = "0.10.1"
-#bvh = "0.3.2"
-nalgebra = "0.24.1"
+bvh = "0.3.2"
 serde = "1.0.117"
 serde_json = "1.0.59"
 serde_derive = "1.0.117"
 rayon = "1.5.0"
-
-triangle = {path = "/home/p4ymak/Work/00_P4/Rust/triangle"}
+triangle = "0.1.351"
 
 [profile.release]
 opt-level = 3
