--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,18 @@
 [package]
 name = "eyek"
-version = "0.2.7"
-authors = ["Roman Chumak <p4ymak@gmail.com>"]
-edition = "2018"
+version = "0.2.8"
+authors = ["Roman Chumak <p4ymak@yandex.ru>"]
+edition = "2021"
 
 [dependencies]
-image = "0.23.12"
-obj = "0.10.1"
-bvh = "0.3.2"
-serde = "1.0.117"
-serde_json = "1.0.59"
-serde_derive = "1.0.117"
-rayon = "1.5.0"
-triangle = "0.1.353"
+image = "0.24.8"
+obj = "0.10.2"
+bvh = "0.4.0"
+serde = "1.0.196"
+serde_json = "1.0.113"
+serde_derive = "1.0.196"
+rayon = "1.8.1"
+triangle = "0.2.0"
 
 [profile.release]
 opt-level = 3
